--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
     <div class="container"> 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <!--Menu-->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand" href="/">
                         <img src="./img/L.png" style="width: 20%;">
                     </a>
@@ -32,6 +34,50 @@
                       </ul>
                     </div>
                   </nav>
+
+
+                  <!--Header-->
+                  <header class="main-header">
+                    <div class="background-ovelay text-white py-5">
+                        <div class="container">
+                            <div class="row">   
+                                <div class="col-md-6 text-center justify-content-center align-self-center">
+                                    <h1>Titulo del producto</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, consequatur.</p>
+                                    <a href="" class="btn btn-outline-secondary btn-lg text-white">
+                                        Leer mas ...
+                                    </a>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="./img/p2.png" class="img-fluid d-none d-sm-block">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  </header>
+
+                  <!--subscripcion-->
+                  <section class="bg-dark text-white py-5">
+                      <div class="container">
+                          <div class="row">
+                              <div class="col-md-4">
+                                  <input type="text" class="form-control form-control-lg" placeholder="ingrese su nombre">
+                              </div>
+                              <div class="col-md-4">
+                                    <input type="email" class="form-control form-control-lg" placeholder="ingrese su E-Mail">
+                              </div>
+                              <div class="col-md-4">
+                                  <button class="btn btn-primary btn-lg bt-block">
+                                      Subscribete
+                                  </button>
+                              </div>
+                          </div>
+                      </div>
+
+                  </section>
+
+
+
 
     </div>
 
